<resources>
    <string name="app_name">Brizingr2k19</string>
    <string name="contact_us">Contact us</string>
    <string name="event">Event</string>
    <string name="schedule">Schedule</string>
    <string name="about_nbrizingr">About Brizingr</string>
    <string name="mechanical">Mechanical</string>
    <string name="ec">EC</string>
    <string name="ic">IC</string>
    <string name="computer">Computer</string>
    <string name="civil">Civil</string>
    <string name="auto_nmobile">Auto  Mobile</string>
    <string name="fun_zone">Fun Zone</string>
    <string name="electrical">Electrical</string>
    <string name="raichura_mithilesh">Raichura Mithilesh</string>
    <string name="ce_dept">Computer Department.</string>
    <string name="mo_9913291221">Mo. 9913291221</string>
    <string name="kapadiya_dhaval">Kapadiya Dhaval</string>
    <string name="mechanical_department">Mechanical Department</string>
    <string name="mo_9426623326">Mo. 9426623326</string>
    <string name="dodiya_rishit">Dodiya Rishit</string>
    <string name="civil_department">Civil Department</string>
    <string name="mo_9408886651">Mo. 9408886651</string>
    <string name="sagar_bhargav">Sagar Bhargav</string>
    <string name="automobile_department">AutoMobile Department</string>
    <string name="mo_9712224275">Mo. 9712224275</string>
    <string name="mo_8264697048">Mo. 8264697048</string>
    <string name="ec_department">EC Department</string>
    <string name="zinzuvadiya_vivek">Zinzuvadiya Vivek</string>
    <string name="mo_9687964013">Mo. 9687964013</string>
    <string name="ic_department">IC Department</string>
    <string name="sihora_parin">Sihora Parin</string>
    <string name="organizing_panel">Organizing Panel</string>
    <string name="_6th_march">6th March</string>
    <string name="_7th_march">7th March</string>
    <string name="brizingr_2k19">Brizingr 2k19</string>
    <string name="technical">Technical</string>
    <string name="non_technical">Non Technical</string>
    <string name="invincible">Invincible</string>
    <string name="adventure_activities">Adventure Activities</string>
    <string name="visit_our_website">Visit our Website</string>
    <string name="description_brizingr">Government Engineering College has been conducting Brizingr, an annual state level techfest for aspirants from various engineering colleges with a very high competitive spirit since 2012. This year with the same determination and enthusiasm, GEC - Rajkot is ready to host BRIZINGR 19 to set up new milestones. It is a complete package of technical knowledge and entertainment with euphoria which would provide lifetime memories and new ideas not only to participants but also to viewers..!!</string>
    <string name="government_engg_college_rajkot">Government Engg. college Rajkot</string>
    <string name="adress_gecr">Since 2004 \n Mavdi - Kankot Road, Near Hanuman Mandir, Rajkot, Gujarat 360005</string>
    <string name="developed_by">Developed by</string>
    <string name="harshil_gohel">Harshil Gohel</string>
    <string name="student_of_computer_engineering">Student of Computer Engineering.</string>
    <string name="nehal_dholakia">Nehal Dholakia</string>
</resources>
