<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="wrap_content"
        android:id="@+id/row1"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/card_computer"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/computer_img"
                    android:src="@drawable/ic_desktop_mac_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/computer_text"
                    android:text="@string/computer"
                    android:layout_below="@id/computer_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/card_mech"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="100dp"
                    android:id="@+id/mech_img"
                    android:src="@drawable/ic_settings_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mech_text"
                    android:text="@string/mechanical"
                    android:layout_below="@id/mech_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row2"
        android:layout_below="@id/row1"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/card_ec"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/ec_img"
                    android:src="@drawable/ic_show_chart_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ec_text"
                    android:text="@string/ec"
                    android:layout_below="@id/ec_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/card_ic"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="100dp"
                    android:id="@+id/ic_img"
                    android:src="@drawable/ic_games_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ic_text"
                    android:text="@string/ic"
                    android:layout_below="@id/ic_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row3"
        android:layout_below="@id/row2"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/card_civil"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/civil_img"
                    android:src="@drawable/ic_home_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/civil_text"
                    android:text="@string/civil"
                    android:layout_below="@id/civil_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/card_automobile"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="100dp"
                    android:id="@+id/automobile_img"
                    android:src="@drawable/ic_directions_car_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/automobile_text"
                    android:text="@string/auto_nmobile"
                    android:layout_below="@id/automobile_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row4"
        android:layout_below="@id/row3"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/card_electrical"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/electrical_img"
                    android:src="@drawable/ic_power_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/electrical_text"
                    android:text="@string/electrical"
                    android:layout_below="@id/electrical_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/card_fun"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="100dp"
                    android:id="@+id/funzone_img"
                    android:src="@drawable/ic_tag_faces_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/funzone_text"
                    android:text="@string/fun_zone"
                    android:layout_below="@id/funzone_img"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>