<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <android.support.v7.widget.CardView
               android:layout_width="200dp"
               android:layout_height="150dp"
               android:layout_margin="10dp"
               android:id="@+id/card_about"
               android:layout_centerHorizontal="true"
               android:layout_marginBottom="20dp">
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="8dp">

                   <ImageView
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:layout_centerHorizontal="true"

                       android:id="@+id/about_img"
                       android:src="@drawable/ic_public_black_24dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/about_text"
                       android:text="@string/about_nbrizingr"
                       android:layout_below="@id/about_img"
                       android:textSize="20sp"
                       android:gravity="center"
                       android:layout_centerHorizontal="true"/>

               </RelativeLayout>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="200dp"
               android:layout_height="150dp"
               android:layout_margin="10dp"
               android:id="@+id/card_schedule"
               android:layout_below="@id/card_about"
               android:layout_centerHorizontal="true"
               android:layout_marginBottom="20dp">
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="8dp">

                   <ImageView
                       android:layout_width="100dp"
                       android:layout_height="100dp"

                       android:id="@+id/schedule_img"
                       android:layout_centerHorizontal="true"
                       android:src="@drawable/ic_schedule_black_24dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/schedule_text"
                       android:text="@string/schedule"
                       android:layout_below="@id/schedule_img"
                       android:textSize="20sp"
                       android:gravity="center"
                       android:layout_centerHorizontal="true"/>

               </RelativeLayout>

           </android.support.v7.widget.CardView>
           <android.support.v7.widget.CardView
               android:layout_width="200dp"
               android:layout_height="150dp"
               android:layout_margin="10dp"
               android:id="@+id/card_event"
               android:layout_below="@id/card_schedule"
               android:layout_centerHorizontal="true"
               android:layout_marginBottom="20dp">
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="8dp">

                   <ImageView
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:layout_centerHorizontal="true"
                       android:id="@+id/event_img"
                       android:src="@drawable/ic_event_black_24dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/event_text"
                       android:text="@string/event"
                       android:layout_below="@id/event_img"
                       android:textSize="20sp"
                       android:gravity="center"
                       android:layout_centerHorizontal="true"/>

               </RelativeLayout>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="200dp"
               android:layout_height="150dp"
               android:layout_margin="10dp"
               android:id="@+id/card_contact"
               android:layout_below="@id/card_event"
               android:layout_centerHorizontal="true"
               android:layout_marginBottom="20dp">
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="8dp">

                   <ImageView
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:layout_centerHorizontal="true"
                       android:id="@+id/contact_img"
                       android:src="@drawable/ic_phone_android_black_24dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/contact_text"
                       android:text="@string/contact_us"
                       android:layout_below="@id/contact_img"
                       android:textSize="20sp"
                       android:gravity="center"
                       android:layout_centerHorizontal="true"/>

               </RelativeLayout>

           </android.support.v7.widget.CardView>

       </RelativeLayout>
    </ScrollView>

</RelativeLayout>